project(Resources C)
cmake_minimum_required(VERSION 3.5)
add_executable(Resources ResourcesTest.c)
if (MSVC)
    # warning level 4 and all warnings as errors
    add_compile_options(/W4 /WX)
else()
    # lots of warnings and all warnings as errors
    add_compile_options(-Wall -Wextra -pedantic -Werror)
endif()
